bugfix: display size home screen on mobile

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,6 @@
 
 .mat-expansion-panel-header-description, .mat-expansion-panel-header-title {
   flex-basis: auto;
-  height: 63px;
   justify-content: center;
   flex-direction: column;
   text-align: center;
@@ -13,4 +12,9 @@
 
 .mat-expansion-panel-header-description {
   font-size: 20px;
+}
+
+.panel-header-text {
+  height: auto;
+  padding: 10px;
 }
